tests/valid/expressions/field_access.nyx
// Field access expressions
struct Point
    x: f64
    y: f64

func field_access(p: Point) -> f64
    let x = p.x
    let y = p.y
    return p.x + p.y
